--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
-    "Email": "zdgzcfsfs",
+    "GrowID": "Spameria3242i",
+    "Password": "123spame#$@3",
+    "Email": "zdgzcf43243242sfs",
     "Domain": "@gmail.com",
     "Port": 17198
 }
